# hummer-android

./: README.md  build.gradle  gradle.properties  settings.gradle
Files/: Demo_Button.js  Demo_Image.js  Demo_Input.js  Demo_Text.js  Demo_View.js
Script/: Gemfile
gradle/wrapper/: gradle-wrapper.properties
hummer-compiler/: build.gradle
hummer-component/: build.gradle
hummer-component/src/androidTest/java/com/hummer/: ExampleInstrumentedTest.java
hummer-component/src/main/: AndroidManifest.xml
hummer-core/: CMakeLists.txt  build.gradle
hummer-core/src/main/: AndroidManifest.xml
hummer-core/src/main/java/com/hummer/core/: HMModuleManager.java
hummer-core/src/main/java/com/hummer/core/base/: HMExportClass.java  HMExportMethod.java  HMExportPlugin.java  HMExportProperty.java  HMPerformancePlugin.java  NativeModule.java
hummer-core/src/main/java/com/hummer/core/common/: ILifeCycle.java
hummer-core/src/main/java/com/hummer/core/jni/: JSCallAsFunction.java  JSClass.java  JSClassDefinition.java  JSContext.java  JSGetProperty.java  JSObjectFunction.java  JSPropertyAttributes.java  JSSetProperty.java  JSStaticFunction.java  JSStaticVariable.java  JSValue.java
hummer-core/src/main/java/com/hummer/core/manager/: HMExportManager.java
hummer-core/src/main/java/com/hummer/core/module/: HMBuilder.java  HMModule.java
hummer-core/src/main/java/com/hummer/core/module/handler/: WebImageHandler.java
hummer-core/src/main/java/com/hummer/core/utility/: StringUtil.java  TimeCostType.java
hummer-core/src/main/jni/cpp/CppWrapper/: CallbackManager.cpp  CallbackManager.h  ClassWrapper.cpp  ClassWrapper.h  ContextManager.cpp  ContextManager.h  ContextWrapper.cpp  ContextWrapper.h  ValueManager.cpp  ValueManager.h  ValueWrapper.cpp  ValueWrapper.h  WrapperUtility.cpp  WrapperUtility.h
hummer-core/src/main/jni/cpp/JavaInterface/: JSClass.cpp  JSContext.cpp  JSValue.cpp  JavaScriptCore.cpp  JavaScriptCore.h
hummer-core/src/main/res/values/: strings.xml
hummer-demo-app/: build.gradle
hummer-demo-app/src/androidTest/java/com/hummer/: ExampleInstrumentedTest.java
hummer-demo-app/src/main/: AndroidManifest.xml
hummer-demo-app/src/main/java/com/hummer/demo/: App.java  (+5 more)
hummer-demo-app/src/main/res/layout/: activity_demo.xml  activity_main.xml  mylist.xml
hummer-demo-app/src/main/res/xml/: file_paths.xml
hummer-sdk/: build.gradle
hummer-sdk/src/main/: AndroidManifest.xml
hummer-sdk/src/main/res/values/: strings.xml
hummer-sdk/src/test/java/com/hummer/: ExampleUnitTest.java
(+75 files in other folders)
